force-app/main/default/objects/Custom_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Activities</relationshipLabel>
    <relationshipName>Custom_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>