force-app/main/default/objects/Custom_Activity__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <description>The Lightning Design System name of the icon. Names are written in the format &#39;utility:down&#39; where &#39;utility&#39; is the category, and &#39;down&#39; is the specific icon to be displayed.</description>
    <inlineHelpText>The Lightning Design System name of the icon. Names are written in the format &#39;utility:down&#39; where &#39;utility&#39; is the category, and &#39;down&#39; is the specific icon to be displayed.</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>