force-app/main/default/objects/Custom_Activity__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <inlineHelpText>Description of activity, displays under title</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>