force-app/main/default/objects/Custom_Activity__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <description>Time that the activity occurred, suggest entering in &#39;12:00 pm&#39; format</description>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>